Fixing the way tables overflow in dashboard view

--- a/caravel/assets/visualizations/pivot_table.css
+++ b/caravel/assets/visualizations/pivot_table.css
@@ -1,13 +1,17 @@
-.gridster .widget.pivot_table {
+.gridster .widget.pivot_table .slice_container {
     overflow: auto !important;
 }
 
-.table tr>th {
+.widget.pivot_table table {
+    margin: 0px !important;
+}
+
+.widget.pivot_table tr>th {
     padding: 1px 5px !important;
     font-size: small !important;
 }
 
-.table tr>td {
+.widget.pivot_table tr>td {
     padding: 1px 5px !important;
     font-size: small !important;
 }
